<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

                <TextView
                    android:id="@+id/textView"
                    android:layout_width="368dp"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/properties"
                    android:textAllCaps="true"
                    android:textColor="@color/colorPrimary"
                    android:textSize="18sp"
            />

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:minWidth="0dp"
                    android:text="@string/preset"

                    />

                <Spinner
                    android:id="@+id/preset_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="12dp"
                   />

                <TextView
                    android:id="@+id/textView3"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/priority"
                    />

                <Spinner
                    android:id="@+id/priority_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    tools:layout_editor_absoluteY="83dp"
                    android:layout_marginTop="14dp"
                    />

                <TextView
                    android:id="@+id/textView4"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/actions"
                   />

                <Spinner
                    android:id="@+id/actions_spinner"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"

                    android:layout_marginTop="11dp"
                    />

                <TextView
                    android:id="@+id/title_label"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@+id/title_editor"
                    android:text="@string/title"
                  />

                <EditText
                    android:id="@id/title_editor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                    />

                <TextView
                    android:id="@+id/text_label"
                    android:layout_width="48dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:labelFor="@+id/text_editor"
                    android:text="@string/text"
                    tools:layout_editor_absoluteX="8dp"
         />

                <EditText
                    android:id="@id/text_editor"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="8dp"
                    android:layout_marginStart="8dp"
                    android:ems="10"
                    android:inputType="textPersonName"
                   />

                <CheckBox
                    android:id="@+id/include_large_icon_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="16dp"
                    android:text="@string/include_large_icon"
                     />

                <CheckBox
                    android:id="@+id/local_only_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/local_only"
                    />

                <CheckBox
                    android:id="@+id/include_content_intent_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/include_content_intent"
                    />

                <CheckBox
                    android:id="@+id/vibrate_checkbox"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/vibrate"/>

                <LinearLayout
                    android:id="@+id/background_pickers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp"
                    android:layout_marginEnd="16dp"
                    android:layout_marginStart="16dp"
                    android:layout_marginTop="8dp"
                    android:orientation="vertical" />
        </LinearLayout>
</ScrollView>
